Remove failing link

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## How to use the SQL cell\n",
     "\n",
-    "When running the extension without specifying a database, the default database is https://www.kaggle.com/datasets/freeman007/world-data/\n",
+    "When running the extension without specifying a database, a default database is used.\n",
     "\n",
     "This database contains the following columns:\n",
     "\n",
